@@ -2,9 +2,10 @@ lilv (0.24.7) unstable;
 
   * Fix cases where incorrect translation is used
   * Fix deleting state bundles loaded from the model
+  * Fix memory leak when dyn-manifest has no plugins (thanks Michael Fisher)
   * Implement state:freePath feature
 
- -- David Robillard <d@drobilla.net>  Sat, 18 Jan 2020 16:10:28 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 18 Jan 2020 16:34:41 +0000
 
 lilv (0.24.6) stable;
 
